# talk--unharness-the-agent

./: .gitignore  README.md
agents-from-simple-to-complex/: pyproject.toml
agents-from-simple-to-complex/skills/teaching-style/: SKILL.md
agents-from-simple-to-complex/src/: 1-just-a-model.py  2-tool-loop.py  3-pydantic-ai.py  4-pydantic-ai-read-write-edit-skills.py  4-pydantic-ai-read-write-edit.py  5-pydantic-ai-search-skills.py  event_logging.py
agents-from-simple-to-complex/src/agents_from_simple_to_complex/: __init__.py
pydantic-ai-reviewer/: .env.example  README.md  pyproject.toml
pydantic-ai-reviewer/skills/screen-candidate/: SKILL.md
pydantic-ai-reviewer/skills/screen-candidate/references/: correspondence-playbook.md  internal-notes-checklist.md  linkedin-review.md  services-matrix.md
pydantic-ai-reviewer/skills/screen-candidate/references/template/: advance.txt  decline.txt  follow_up_linkedin.txt  follow_up_need_info.txt
pydantic-ai-reviewer/skills/screen-candidate/scripts/: linked_in_retriever.py
pydantic-ai-reviewer/skills/screen-candidate/scripts/data/linked_in_profiles/: albert_ziegler.md  doug_turnbull.md  greg_ceccarelli.md  hamel_husain.md  hugo_bowne_anderson.md  john_berryman.md
pydantic-ai-reviewer/src/pydantic_ai_reviewer/: __init__.py  __main__.py  ai_reviewer.py  enums.py  event_logging.py  linked_in_retriever.py  models.py
rendered-slides/: slides.html
slides-in-development/: manifest.yaml
slides-in-development/planning/: outline.md
slides-in-development/slides/: ai-reviewer.json  (+6 more)
slides_in_development/: manifest.yaml
(+39 files in other folders)
