[project]
name = "agents-from-simple-to-complex"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "John Berryman", email = "jfberryman@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "anthropic>=0.117.0",
    "pydantic-ai>=2.13.0",
    "pydantic-ai-harness>=0.7.1",
    "pydantic-ai-skills>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agents-from-simple-to-complex = "agents_from_simple_to_complex:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
