[project]
name = "pydantic-ai-reviewer"
version = "0.1.0"
description = "Standalone Pydantic AI reviewer example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10.0",
  "pydantic-ai>=1.77.0",
  "pydantic-ai-skills>=0.6.0",
  "pydantic-ai-slim[duckduckgo,web-fetch]>=1.77.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_reviewer"]
